// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<RelatedProductsHeader /> > should match snapshot 1`] = `
<div>
  <div
    class="flex items-center justify-between mb-5"
    data-testid="section-header"
  >
    <h2
      class="text-xl font-semibold bg-gradient-to-r from-primary to-primary/80 bg-clip-text text-transparent"
      data-testid="section-title"
    >
      Related Products
    </h2>
  </div>
</div>
`;

exports[`<RelatedProductsHeader /> > should match snapshot 2`] = `
<div>
  <div
    class="flex items-center justify-between mb-5"
    data-testid="section-header"
  >
    <h2
      class="text-xl font-semibold bg-gradient-to-r from-primary to-primary/80 bg-clip-text text-transparent"
      data-testid="section-title"
    >
      Related Products
    </h2>
    <a
      class="text-sm text-primary/80 hover:text-primary flex items-center gap-1 transition-colors"
      data-testid="section-action-link"
      href="/products"
    >
      View All
       
      <span
        data-testid="test-icon"
      >
        Icon
      </span>
    </a>
  </div>
</div>
`;
